feat: 自定义特征值

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -274,12 +274,12 @@
             //     allowClose: false
             // });
 
-            // nthTabs.addTab({
-            //     id: "inventory_move",
-            //     title: '库存移动',
-            //     url: "/inventory/move",
-            //     allowClose: false
-            // });
+            nthTabs.addTab({
+                id: "inventory_move",
+                title: '库存移动',
+                url: "/inventory/move",
+                allowClose: false
+            });
 
             // nthTabs.addTab({
             //     id: "inventory_count",
@@ -330,12 +330,12 @@
             //     allowClose: false
             // });
 
-            nthTabs.addTab({
-                id: "produce_bom_list",
-                title: 'BOM管理',
-                url: "/reports/721874903405432832",
-                allowClose: false
-            });
+            // nthTabs.addTab({
+            //     id: "produce_bom_list",
+            //     title: 'BOM管理',
+            //     url: "/reports/721874903405432832",
+            //     allowClose: false
+            // });
 
             // nthTabs.addTab({
             //     id: "produce_orders",
