--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -96,7 +96,6 @@
         </div>
         <div id="dialogInput" style="display: none"></div>
         <div id="multipleDialogInput" style="display: none"></div>
-        <sp:select class="hidden" id="color"  key="COLOR" emptyItemText/>
         <div class="operator-bar text-center" id="operator-bar">
             <button class="btn btn-primary" type="button" id="send-btn" onclick="send()">
                 <i class="fa fa-send"></i> 提交</button>
@@ -154,18 +153,7 @@
                     required: true,
                     mode: 'multiple', // 多选
                     selected: function ($tr, value) {
-                        if (Array.isArray(value)) {
-                            for (let row of value) {
-                                $tr.find(':input[name=color]')
-                                    .attr('disabled', !row.batchManagement)
-                                    .attr('readonly', !row.batchManagement)
-                                $tr = $tr.next()
-                            }
-                        } else {
-                            $tr.find(':input[name=color]')
-                                .attr('disabled', !value.batchManagement)
-                                .attr('readonly', !value.batchManagement)
-                        }
+                        characteristic.selectedCharacteristic($tr, value);
                     }
                 },
                 {
@@ -179,11 +167,10 @@
                     title: "规格"
                 },
                 {
-                    type: "select",
-                    name: "color",
-                    width: 80,
-                    title: "颜色",
-                    datasource: $('#color'),
+                    type: "characteristic",
+                    name: "characteristic",
+                    // width: 80,
+                    title: "特征值",
                     required: true,
                     disabled: true
                 },
@@ -313,7 +300,9 @@
                     referenceCode = $referenceCode.val()
                     console.log(res)
 
-                    $editableTable.editableTablePlus('setValue', res.itemList)
+                    // $editableTable.editableTablePlus('setValue', res.itemList)
+
+                    characteristic.loadCharacteristic($editableTable, res.itemList)
 
                     res.itemList.forEach((item, index) => {
                         let $tr = $("#table-container tbody tr:nth-child("+(index + 1)+")")
@@ -403,18 +392,7 @@
             delete params.attachment_file
             params['attachmentList'] = JSON.parse(params['attachmentList'])
 
-            for (let item of params['itemList']) {
-                if (item.color) {
-                    let res = [];
-                    for (let i = 0; i < item.color.length; i++) {
-                        res[i] = ("00" + item.color.charCodeAt(i).toString(16)).slice(-4);
-                    }
-
-                    item.batchCode = res.join("")
-                } else {
-                    item.batchCode = null
-                }
-            }
+            characteristic.getCharacteristicParams($editableTable, params['itemList'])
 
             console.log(params)
 
