--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -435,6 +435,9 @@
         }
 
         function download() {
+            if (!valid()) {
+                return
+            }
             window.location = "/purchase_order/" + document.getElementById('id').value + "/download"
         }
 
