--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,12 +21,12 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <ul class="nav navbar-nav ml-auto">
-        <li class="nav-item d-md-down-none">
-            <a class="nav-link" href="javascript:addTab('notice-list', '公告列表', '/notice/list')">
-                <i class="icon-bell" data-toggle="tooltip" title data-original-title="公告"></i>
-                <span class="badge badge-pill badge-danger"> 1</span>
-            </a>
-        </li>
+<!--        <li class="nav-item d-md-down-none">-->
+<!--            <a class="nav-link" href="javascript:addTab('produce_order_stock', '生产库存预警', '/reports/710331838161227776?mode=multiple')">-->
+<!--                <i class="icon-bell" data-toggle="tooltip" title data-original-title="生产库存预警"></i>-->
+<!--                <span class="badge badge-pill badge-danger"> 1</span>-->
+<!--            </a>-->
+<!--        </li>-->
         <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <!--<img class="img-avatar" th:src="@{/img/avatars/6.jpg}" th:alt="${session.user.name}">-->
